--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BURL=https://musicplayer-yx5c.onrender.com
+VITE_BURL=http://52.206.232.210:5000
 VITE_API=https://api.cloudinary.com/v1_1/dbj3hfkzr/upload
